--- a/style.css
+++ b/style.css
@@ -22,5 +22,7 @@ svg {
 	stroke: #6fbc6d;
 	stroke-width: 2;
 	stroke-dasharray: 5;
-	stroke-dashoffset: 10;
+	stroke-dashoffset: 150;
+
+	animation: offset 5s linear forwards;
 }
