--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
 	}
 }
 
+@keyframes fill-it {
+	100% {
+		fill: #6fbc6d;
+	}
+}
+
 /* --------------------------
   SVG Styles
 --------------------------- */
